# shared_reading_personalization_question_MAS

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  config_cloud.json  pyproject.toml  start_ollama.sh
data/: boy.md  knos.md
outputs/: original.md  profile.md  retroalimentacion.md  si.md  version_1.md  version_2.md  version_3.md  version_4.md  version_final.md
scripts/: experiments_cloud.py  experiments_local.py  main.py  monitoring.py
src/: exceptions.py  experiments_cloud.py  experiments_local.py  main.py  main_2.py  monitoring.py  si.py  trial.py  utils.py
src/agents/: langfuse_organization.py
src/agents/combined/: combined.py  information.py  organization.py
src/agents/core/: base_agent.py  base_information.py  base_lm_config.py  base_organization.py
src/agents/personalization/: coherence_critic.py  critic.py  edition_critic.py  emotion_critic.py  extractor.py  image_editor.py  information.py  moral_critic.py  naturalness_critic.py  organization.py  pair_critic.py  personalizer.py  planner.py  style_critic.py  triage_critic.py  value_critic.py
src/agents/questions/: aggregator.py  completion_questioner.py  completion_refiner.py  completition_questioner.py  distancing_questioner.py  edition_critic.py  extractor.py  information.py  open_ended_questioner.py  organization.py  questioner.py  recall_questioner.py  wh_questioner.py
src/agents/shared/: image_captioner.py  information.py
src/domain/book_aggregate/: book.py  content.py  image.py  page.py
src/domain/evaluation_aggregate/: category.py  criteria.py  evaluation.py
src/domain/services/: book_parser.py  book_renderer.py  category_renderer.py  criteria_renderer.py  evaluation_parser.py  evaluation_renderer.py  preference_parser.py  preference_renderer.py
src/roles/: langfuse_role.py
src/roles/combined/: combined.py
src/roles/core/: base_role.py
src/roles/permissions/: last_message_permission.py  last_n_meesages_permission.py  no_info_permission.py  no_system_prompts.py
src/roles/personalization/: coherence_critic.py  criteria.py  critic.py  edition_critic.py  emotion_critic.py  extractor.py  image_editor.py  moral_critic.py  naturalness_critic.py  pair_critic.py  personalizer.py  planner.py  style_critic.py  triage_critic.py  value_critic.py
src/roles/questions/: aggregator.py  completion_questioner.py  completion_refiner.py  completition_questioner.py  criteria.py  distancing_questioner.py  edition_critic.py  extractor.py  open_ended_questioner.py  questioner.py  recall_questioner.py  types.py  wh_questioner.py
src/roles/shared/: image_captioner.py
src/shared_reading_mas/: exceptions.py  pipelines.py
src/shared_reading_mas/agents/: langfuse_organization.py
src/shared_reading_mas/agents/combined/: combined.py  information.py  organization.py
src/shared_reading_mas/roles/: langfuse_role.py
(+56 files in other folders)
