[project]
name = "sistema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langfuse>=3.10.1",
    "langgraph>=1.0.4",
    "langgraph-supervisor>=0.0.31",
    "lark>=1.3.1",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
    "ruff-lsp>=0.0.62",
]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Let formatter handle line length

# Linter-wide line length (formatter does NOT use this value)
line-length = 88

exclude = [
    ".venv",
    "venv",
    "migrations",
    "build",
    "dist",
    ".git",
    "__pycache__",
]

target-version = "py311"


# ------------------------------
# Ruff Formatter
# ------------------------------
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"  # or a number like 72


# ------------------------------
# Per-file overrides
# ------------------------------
[tool.ruff.per-file-ignores]
"tests/*" = ["F403", "F405"]
