[project]
name = "shared-reading-mas"
version = "0.1.0"
description = "A multi-agent system (MAS) built with LangGraph and LangChain that personalizes children's stories and generates educational questions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.7",
    "langchain-openrouter>=0.0.2",
    "langfuse>=3.10.1",
    "langgraph>=1.0.4",
    "langgraph-supervisor>=0.0.31",
    "lark>=1.3.1",
    "matplotlib>=3.10.8",
    "openai>=2.8.1",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
    "ruff-lsp>=0.0.62",
]

[project.scripts]
shared-reading = "shared_reading_mas.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ------------------------------
# Ruff
# ------------------------------
[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
line-length = 88

exclude = [
    ".venv",
    "venv",
    "migrations",
    "build",
    "dist",
    ".git",
    "__pycache__",
]

target-version = "py311"

# ------------------------------
# Ruff Formatter
# ------------------------------
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ------------------------------
# Per-file overrides
# ------------------------------
[tool.ruff.per-file-ignores]
"tests/*" = ["F403", "F405"]